# odg

./: CMakeLists.txt  README.md  run  swift_build  vcpkg.json
models/: colored_monkey.ply
src/: Camera.cxx  Config.cxx  Game.cxx  Loader.cxx  Math.cxx  Mesh.cxx  Object.cxx  Renderer.cxx  Shader.cxx  ShaderFactory.cxx  Window.cxx  main.cxx
src/include/: Camera.hxx  Config.hxx  Game.hxx  Loader.hxx  Math.hxx  Mesh.hxx  Model.hxx  Object.hxx  RGB.hxx  Renderer.hxx  Shader.hxx  ShaderFactory.hxx  Texture.hxx  Vertex.hxx  Window.hxx
src/shaders/: frag.fs  vert.vs
